# praetor-lsp

./: .gitignore  .opencode.jsonc  .praetor.toml  Cargo.toml  LESSONS.md  LICENSE  PLAN.md  README.md  SHADOW-VERIFICATION.md  report.md
.github/workflows/: verify.yml
.praetor/: shadow-results.json  state-graph.json
config/: opencode.jsonc.example
docs/: ENFORCEMENT-PLAN.md  LEGACY-RESURRECTION.md  LESSONS.md  QUADRUPLE-BOOKKEEPING.md  ROADMAP.md  SETTING-UP.md  STATUS.md  verification-plan.md
praetor-derive/: Cargo.toml
praetor-derive/src/: lib.rs
scripts/: complexity_lsp.py  infer_lsp.py  pre-commit.sh  rizin_lsp.py  slopguard_lsp.py  sonar_bridge.py
src/: config.rs  downloader.rs  init.rs  instruct.rs  lib.rs  lsp.rs  main.rs  report.rs  setup.rs  suppressor.rs  validate.rs  verify.rs
src/ast/: languages.rs  mod.rs
src/binary/: facts.rs  lift.rs  mod.rs  patch.rs  patterns.rs  verify.rs
src/bridge/: infer.rs  mod.rs  semgrep.rs  sonarlint.rs
src/checks/: architecture.rs  complexity.rs  facts.rs  intent.rs  metrics.rs  mod.rs  state_graph.rs
src/facts/: mod.rs
test/fixtures/: insecure.py
tests/: smoke_test.rs
